# XSNAP

./: .buildinfo  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  robots.txt  search.html  searchindex.js  sitemap.xml
.doctrees/: index.doctree
.doctrees/about/: development.doctree  index.doctree  install.doctree  intro.doctree  publication.doctree  quickstart.doctree
.doctrees/api/: csmanalysis.doctree  extractchandra copy.doctree  extractchandra.doctree  extractnustar.doctree  extractswift.doctree  extractxmm.doctree  index.doctree  makeregion.doctree  sourcedetection.doctree  spectrum.SpectrumFit.doctree  spectrum.SpectrumManager.doctree  spectrum.doctree  swiftstackpc.doctree  temperatureestimator.doctree
.doctrees/examples/: index.doctree
.github/workflows/: documentation.yml  publish.yml
_sources/about/: development.rst.txt  index.rst.txt  install.rst.txt  intro.rst.txt  publication.rst.txt  quickstart.rst.txt
_sources/api/: csmanalysis.rst.txt  extractchandra.rst.txt  extractswift.rst.txt  extractxmm.rst.txt  index.rst.txt  sourcedetection.rst.txt  spectrum.SpectrumFit.rst.txt  spectrum.rst.txt  (+3 more)
_static/: custom.css
about/: development.html  index.html  install.html  intro.html  publication.html  quickstart.html
api/: csmanalysis.html  extractchandra copy.html  extractchandra.html  extractnustar.html  extractswift.html  extractxmm.html  index.html  makeregion.html  sourcedetection.html  spectrum.SpectrumFit.html  spectrum.SpectrumManager.html  spectrum.html  swiftstackpc.html  temperatureestimator.html
docs/: about.rst  conf.py  index.rst  installation.rst
examples/: index.html
notebook/: Scripts.ipynb  SpectrumTutorial.ipynb  Tutorial.ipynb
(+96 files in other folders)
